--- a/src/Components/Home/Feature.css
+++ b/src/Components/Home/Feature.css
@@ -41,3 +41,24 @@
 .icons i:hover{
      color: white;
 }
+@media (min-width: 368px){
+     .doctors{
+       display: grid;
+       grid-template-columns: repeat(1, 1fr);
+       grid-gap: 20px;
+     }
+  }
+  @media (min-width: 768px){
+       .doctors{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 20px;
+          }
+  }
+  @media (min-width: 1168px){
+       .doctors{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 20px;
+          }
+  }
