--- a/src/Components/Shared/About/About.css
+++ b/src/Components/Shared/About/About.css
@@ -19,3 +19,25 @@
      align-items: center;
      justify-content: center;
 }
+
+@media (min-width: 368px){
+     .abouts{
+       display: grid;
+       grid-template-columns: repeat(1, 1fr);
+       grid-gap: 20px;
+     }
+  }
+  @media (min-width: 768px){
+       .abouts{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 20px;
+          }
+  }
+  @media (min-width: 1168px){
+       .abouts{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 20px;
+          }
+  }
