--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -27,7 +27,7 @@
 
 /* responsive */
 
-@media (min-width: 368px) {
+@media only screen and (min-width:320px ) and (max-width: 480px )  {
 	.banner {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
@@ -36,7 +36,7 @@
 	}
 }
 
-@media (min-width: 768px) {
+@media only screen and (min-width: 481px) and (max-width: 768px )  {
 	.banner {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
@@ -45,7 +45,7 @@
 	}
 }
 
-@media (min-width: 1168px) {
+@media only screen and (min-width: 1024px) and (max-width: 1200px)   {
 	.banner {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
