--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -1,50 +1,50 @@
 .service-container {
 	margin: 0 100px;
 }
-.service-title{
-     text-align: center;
-     margin: 30px 0;
+.service-title {
+	text-align: center;
+	margin: 30px 0;
 }
-.service-title span{
-     color: crimson;
+.service-title span {
+	color: crimson;
 }
 .items {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-     grid-gap: 20px;
+	grid-gap: 20px;
 }
-.item{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     border-radius: 10px;
-     box-shadow: 5px 5px 5px grey;
-     background-color: #eee6e8;
-     color: black;
-     padding: 10px
+.item {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
+	box-shadow: 5px 5px 5px grey;
+	background-color: #eee6e8;
+	color: black;
+	padding: 10px;
 }
-.item fas{
-    font-size: 40px
+.item fas {
+	font-size: 40px;
 }
 
-@media (min-width: 368px){
-   .items{
-     display: grid;
-	grid-template-columns: repeat(1, 1fr);
-     grid-gap: 20px;
-   }
+@media only screen and (min-width: 368px) and (max-width: 480px) {
+	.items {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 20px;
+	}
 }
-@media (min-width: 768px){
-     .items{
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          grid-gap: 20px;
-        }
+@media only screen and (min-width: 481px) and (max-width: 768px ) {
+	.items {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 20px;
+	}
 }
-@media (min-width: 1168px){
-     .items{
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          grid-gap: 20px;
-        }
+@media only screen and (min-width: 1024px) and (max-width: 1200px)   {
+	.items {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-gap: 20px;
+	}
 }
