--- a/src/Components/Shared/About/About.css
+++ b/src/Components/Shared/About/About.css
@@ -1,43 +1,42 @@
-.about-container{
-     text-align: center;
-     margin: 40px 100px;
-     
+.about-container {
+	text-align: center;
+	margin: 40px 100px;
 }
-.about-container span{
-     color: crimson;
+.about-container span {
+	color: crimson;
 }
-.abouts{
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     padding-top:20px ;
+.abouts {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	padding-top: 20px;
 }
-.a_img{
-     width: 100%;
+.a_img {
+	width: 100%;
 }
 .about {
-     display: flex;
-     align-items: center;
-     justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-@media (min-width: 368px){
-     .abouts{
-       display: grid;
-       grid-template-columns: repeat(1, 1fr);
-       grid-gap: 20px;
-     }
-  }
-  @media (min-width: 768px){
-       .abouts{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 20px;
-          }
-  }
-  @media (min-width: 1168px){
-       .abouts{
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 20px;
-          }
-  }
+@media only screen and (min-width:368px ) and (max-width: 480px) {
+	.abouts {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		grid-gap: 20px;
+	}
+}
+@media only screen and (min-width:481px ) and (max-width: 768px)  {
+	.abouts {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 20px;
+	}
+}
+@media only screen and (min-width: 1024px) and (max-width: 1200px)  {
+	.abouts {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-gap: 20px;
+	}
+}
