--- a/src/Components/Shared/Footer/Footer.css
+++ b/src/Components/Shared/Footer/Footer.css
@@ -4,8 +4,7 @@ footer {
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 20px;
 }
-.container{
-     
+.container {
 }
 .quick_link {
 	display: flex;
@@ -23,40 +22,39 @@ footer {
 .quick_link span {
 	color: crimson;
 }
-.copyright-text{
-     display: flex;
+.copyright-text {
+	display: flex;
 }
 .copyright-text span {
 	color: crimson;
 	font-weight: 700;
 	font-size: 600;
 	font-family: sans-serif;
-     margin-left: 10px;
+	margin-left: 10px;
 }
 hr {
 	color: crimson;
 	font-weight: 700;
 }
 
-@media (min-width: 368px) {
+@media only screen and (min-width: 320px) and (max-width: 480px ) {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-gap: 20px;
-          
 	}
-     .copyright-text {
-          font-size: 14px;
-     }
+	.copyright-text {
+		font-size: 14px;
+	}
 }
-@media (min-width: 768px) {
+@media only screen and (min-width: 481px ) and (max-width: 768px)  {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media (min-width: 1168px) {
+@media only screen and (min-width: 1024px) and (max-width: 1200px)   {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
