--- a/src/Components/Shared/Header/Header.css
+++ b/src/Components/Shared/Header/Header.css
@@ -1,114 +1,100 @@
+.navbar {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	box-shadow: 5px 5px 5px #dd5d7f;
+	align-items: center;
+	padding: 20px 10px;
 
-.navbar{
-     display: grid;
-     grid-template-columns: repeat(3, 1fr);
-     box-shadow: 5px 5px 5px #dd5d7f;
-     align-items: center;
-     padding: 20px 10px;
-     
-     width: 100%;
-     
+	width: 100%;
 }
-.logo{
-     
-     color: black;
-     font-size: 30px;
-     font-family: sans-serif;
-     font-weight: 500;
-     
+.logo {
+	color: black;
+	font-size: 30px;
+	font-family: sans-serif;
+	font-weight: 500;
 }
-.logo span{
-     color: crimson;
-     
+.logo span {
+	color: crimson;
 }
-.logo a{
-     text-decoration: none;
-     display: flex;
+.logo a {
+	text-decoration: none;
+	display: flex;
 }
-.nav-items{
-     display: flex;
- 
-     
-    
+.nav-items {
+	display: flex;
 }
-.nav-items a{
-     text-decoration: none;
-     color: black;
-     padding:0 10px;
-     margin: 0 5px;
-     border-radius: 5px;
+.nav-items a {
+	text-decoration: none;
+	color: black;
+	padding: 0 10px;
+	margin: 0 5px;
+	border-radius: 5px;
 }
-.active{
-     color: white !important;
+.active {
+	color: white !important;
 }
-.active, .nav-items  a:hover{
-     color: #fff;
-     background-color: crimson;
-     transition: .5s ease-in-out;
-
-     
+.active,
+.nav-items a:hover {
+	color: #fff;
+	background-color: crimson;
+	transition: 0.5s ease-in-out;
 }
-.login{
-     display: flex;
-     align-items: center;
-     padding: 0px 50px;
-   
-     
+.login {
+	display: flex;
+	align-items: center;
+	padding: 0px 50px;
 }
-.login p{
-     color: crimson;
-     font-size: 15px;
-     font-weight: 600;
-     margin-right: 50px;
-     width: 130px;
+.login p {
+	color: crimson;
+	font-size: 15px;
+	font-weight: 600;
+	margin-right: 50px;
+	width: 130px;
 }
 
-.menu-icons{
-     font-size: 30px;
-     display: none;
-     margin-left: 230px;
+.menu-icons {
+	font-size: 30px;
+	display: none;
+	margin-left: 230px;
 }
 
-@media (min-width: 368px){
-     .nav-items{
-          display:none;
-         
-     }
-     .login{
-          display: none;
-     }
-     .logo{
-          font-size: 12px;
-     }
-     .menu-icons{
-          font-size: 30px;
-          display: inline;
-     }
+@media only screen and (min-width:320px ) and (max-width: 480px)  {
+	.nav-items {
+		display: none;
+	}
+	.login {
+		display: none;
+	}
+	.logo {
+		font-size: 12px;
+	}
+	.menu-icons {
+		font-size: 30px;
+		display: inline;
+	}
 }
-@media (min-width: 768px){
-     .nav-items{
-          display:none;
-     }
-     .login{
-          display: none;
-     }
-     .logo{
-          font-size: 15px;
-     }
-    .menu-icons{
-         display: none;
-    }
-   
+@media only screen and (min-width: 481px) and (max-width: 768px )  {
+	.nav-items {
+		display: none;
+	}
+	.login {
+		display: none;
+	}
+	.logo {
+		font-size: 15px;
+	}
+	.menu-icons {
+		display: none;
+	}
 }
-@media(min-width: 1220px){
-     .nav-items{
-          display: inline;
-     }
-     .login{
-          display: flex;
-     }
-     .logo{
-          font-size: 30px;
-     }
-
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+	.nav-items {
+		display: inline;
+	}
+	.login {
+		display: flex;
+	}
+	.logo {
+		font-size: 30px;
+	}
 }
