--- a/src/Components/Home/Feature.css
+++ b/src/Components/Home/Feature.css
@@ -38,21 +38,21 @@
 .icons i:hover {
 	color: white;
 }
-@media only screen and (min-width: 320px ) and (max-width: 480px )  {
+@media only screen and (min-width: 320px) {
 	.doctors {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 481px) and (max-width: 768px )  {
+@media only screen and (min-width: 481px) {
 	.doctors {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1200px)  {
+@media only screen and (min-width: 1024px) {
 	.doctors {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
