--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -27,21 +27,21 @@
 	font-size: 40px;
 }
 
-@media only screen and (min-width: 368px) and (max-width: 480px) {
+@media only screen and (min-width: 320px) {
 	.items {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 481px) and (max-width: 768px ) {
+@media only screen and (min-width: 481px) {
 	.items {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1200px)   {
+@media only screen and (min-width: 1024px) {
 	.items {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
