--- a/src/Components/Shared/About/About.css
+++ b/src/Components/Shared/About/About.css
@@ -19,21 +19,21 @@
 	justify-content: center;
 }
 
-@media only screen and (min-width:368px ) and (max-width: 480px) {
+@media only screen and (min-width: 368px) {
 	.abouts {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width:481px ) and (max-width: 768px)  {
+@media only screen and (min-width: 481px) {
 	.abouts {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1200px)  {
+@media only screen and (min-width: 1024px) {
 	.abouts {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
