--- a/src/Components/Shared/Footer/Footer.css
+++ b/src/Components/Shared/Footer/Footer.css
@@ -37,7 +37,7 @@ hr {
 	font-weight: 700;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 480px ) {
+@media only screen and (min-width: 320px) {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(1, 1fr);
@@ -47,14 +47,14 @@ hr {
 		font-size: 14px;
 	}
 }
-@media only screen and (min-width: 481px ) and (max-width: 768px)  {
+@media only screen and (min-width: 481px) {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 	}
 }
-@media only screen and (min-width: 1024px) and (max-width: 1200px)   {
+@media only screen and (min-width: 1024px) {
 	footer {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
