--- a/src/Components/Booking/Book.css
+++ b/src/Components/Booking/Book.css
@@ -1,48 +1,65 @@
-.booking-container{
-     margin: 0 100px;
-     margin-top: 50px;
+.booking-container {
 
+     padding-top: 150px;
+	
 }
-.title span{
-     color: crimson;
-     font-weight: 600;
+.title span {
+	color: crimson;
+	font-weight: 600;
 }
-.books{
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     gap: 20px;
+.books {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 20px;
 }
-.book{
-     padding: 20px;
-     background-color: #f0d8dd;
-     display: flex;
-     flex-direction: column;
-     justify-content:center;
-     align-items:center;
-     border-radius: 30px;
+.book {
 
+	background-color: #f0d8dd;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 30px;
+	/* width: 100%; */
 }
-.book input, .option{
-     display: inline-block;
-     margin: 20px 20px;
-     height: 40px;
-     width: 340px;
+.book input,
+.option {
+	display: inline-block;
+	margin: 20px 20px;
+	height: 40px;
+	width: 340px;
 }
 
-.book > div{
-     display: flex;
-     flex-direction: column;
+/* .book > div {
+	display: flex;
+	flex-direction: column;
+} */
+.information {
+	display: flex;
+	justify-content: space-between;
 }
-.information{
-     display: flex;
-     justify-content: space-between;
+.fas {
+	color: crimson;
+	margin-right: 20px;
 }
-.fas{
-     color: crimson;
-     margin-right: 20px;
+.book textarea,
+button {
+	margin: 20px;
+	
 }
-.book textarea,button {
-     margin: 20px ;
-     /* height: 100px; */
 
+@media only screen and (min-width: 320px) {
+	.books {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
+@media only screen and (min-width: 481px) {
+	.books {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media only screen and (min-width: 1024px) {
+	.books {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
