--- a/src/Components/Service/Servicedetails.css
+++ b/src/Components/Service/Servicedetails.css
@@ -2,22 +2,43 @@
      display: grid;
      grid-template-rows: repeat(1, 1fr);
      justify-items: center;
+     padding-top: 50px;
     
 
 }
 .service-detail{
      display: flex;
-     padding: 10px;
+     padding:30px 50px ;
      justify-content: center;
      align-items: center;
+     flex-direction: column;
      border-radius: 10px;
      box-shadow: 2px 3px 5px crimson;
      
      width: 50%;
      
 }
-.service-detail img{
-     width: 60%;
-     height: auto;
+.service-detail i{
+     
+   
      border-radius: 50px;
+     font-size: 200px;
+     margin: 30px;
+}
+
+
+@media only screen and (min-width: 320px) {
+	.service-detail{
+          width: 100%;
+     }
+}
+@media only screen and (min-width: 481px) {
+	.service-detail{
+          width: 50%;
+     }
+}
+@media only screen and (min-width: 1024px) {
+	.service-detail{
+          width: 50%;
+     }
 }
